learn coroutine, viewmodel factory, dependency injection, dagger

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,10 +12,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MyApplication">
         <activity
-            android:name=".NewsRecyclerViewActivity"
+            android:name=".NewsDetailActivity"
             android:exported="false" />
         <activity
-            android:name=".RetrofitActivity"
+            android:name=".NewsRecyclerViewActivity"
             android:exported="false" />
         <activity
             android:name=".UserDetailActivity"
